Specify Error Prone JVM args with `.mvn/jvm.config` (#2339)
* Specify Error Prone JVM args with `.mvn/jvm.config`

This allows avoiding fork mode for compilation, which:
- might slightly reduce compilation time
- guarantees that all compiler diagnostics are properly reported

* Combine enforcer executions